--- a/index.html
+++ b/index.html
@@ -1,161 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,600;0,9..144,700;1,9..144,600;1,9..144,700&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Poppins:ital,wght@0,300;1,200&family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,600;0,9..144,700;1,9..144,600;1,9..144,700&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Poppins:ital,wght@0,300;1,200&family=Space+Mono:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/style/style.css" />
     <title>Pusher checkout</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="skip-nav">
-        <a href="#main">Skip navigation</a>
+      <a href="#main">Skip navigation</a>
     </div>
     <header>
-        <div class="logo"><img src="/asset/wppusher-logo copy.png" alt=""></div>
-        <nav>
-            <ul>
-                <li>Download</li>
-                <li>Learn More</li>
-                <li>Pricing</li>
-                <li>Help</li>
-                <li>Account</li>
-            </ul>
-        </nav>
+      <div class="logo">
+        <img src="/asset/wppusher-logo copy.png" alt="WP-pusher logo" />
+      </div>
+      <nav>
+        <ul class="menu">
+          <li>Download</li>
+          <li>Learn More</li>
+          <li>Pricing</li>
+          <li>Help</li>
+          <li>Account</li>
+        </ul>
+        <span class="b-menu">
+          <ion-icon
+            name="menu"
+            onclick="Menu(this)"
+            alt="Hamburger Menu "
+          ></ion-icon>
+        </span>
+      </nav>
     </header>
     <div id="main">
-        <!-- start of container -->
-        <div id="container">
+      <!-- start of container -->
+      <div id="container">
+        <!-- checker heading -->
 
-            <!-- checker heading -->
- 
         <!-- form starts here  -->
         <div class="form-container">
-        <div class="checker grid-col-span-2">
-            <img src="/asset/Checkout.png" alt="">
-        </div>
-                
-        <!-- form div -->
-        <div class="form-div ">
-            
+          <div class="checker grid-col-span-2">
+            <img src="/asset/Checkout.png" alt="Checkout-image" />
+          </div>
+
+          <!-- form div -->
+          <div class="form-div">
             <!--  -->
             <div class="one-basic">
-                <span class="one"><img src="/asset/1.png" alt=""></span>
-                <h3>Your basic Information</h3>
+              <span class="one"
+                ><img src="/asset/1.png" alt="number one"
+              /></span>
+              <h3>Your basic Information</h3>
             </div>
-        <form action="#">
-
-            <!-- name section starts here and email -->
-            <div class="name">
+            <form action="#">
+              <!-- name section starts here and email -->
+              <div class="name">
                 <div class="first-name">
-                    <label for="firstname">First Name</label>
-                    <input type="text" id="firstname" placeholder="Jane" required>
+                  <label for="firstname">First Name</label>
+                  <input
+                    type="text"
+                    id="firstname"
+                    placeholder="Jane"
+                    required
+                  />
                 </div>
                 <div class="last-name">
-                    <label for="lastname">Last Name</label>
-                    <input type="text" id="lastname" placeholder="Doe" required>
+                  <label for="lastname">Last Name</label>
+                  <input type="text" id="lastname" placeholder="Doe" required />
                 </div>
-            </div>
-            <div id="mail">
+              </div>
+              <div id="mail">
                 <div class="email-div">
-                    <label for="e-mail">E-mail</label>
-                    <input type="text" id="e-mail" placeholder="Janedoe@google.com">
+                  <label for="e-mail">E-mail</label>
+                  <input
+                    type="text"
+                    id="e-mail"
+                    placeholder="Janedoe@google.com"
+                  />
                 </div>
-            </div>
+              </div>
 
-            <hr>
+              <hr />
 
-            <div class="payment">
+              <div class="payment">
                 <div class="div-2">
-                    <span class="pay">
-                        <img src="/asset/2.png" alt="">
-                    </span>
-                    <h3>Your Payment Information</h3>
+                  <span class="pay">
+                    <img src="/asset/2.png" alt="" />
+                  </span>
+                  <h3>Your Payment Information</h3>
                 </div>
 
                 <div class="credit">
-                    <label for="credit-card" class="lb-credit">Credit Card</label>
-                    <div class="credit-card" id="card">
-                    <input type="number" name="credit_card" id="credit-card" placeholder="Card Number">
-                    <input type="date" name="" id="">
-                    <input type="Number" placeholder="CVC">
-                    </div>
+                  <label for="credit-card" class="lb-credit">Credit Card</label>
+                  <div class="credit-card" id="card">
+                    <input
+                      type="number"
+                      name="credit_card"
+                      id="credit-card"
+                      placeholder="Card Number"
+                    />
+                    <input type="date" name="date" id="date" />
+                    <input type="Number" placeholder="CVC" />
+                  </div>
                 </div>
+              </div>
 
-            </div>
+              <hr />
+              <div class="btn-push">
+                <input type="submit" value="Buy WP Pusher" class="btn-pusher" />
+              </div>
+              <div class="support">
+                <span><img src="/asset/Mask.png" alt="question mark" /></span>
+                <p>
+                  <strong>Need any help?</strong> Don't hesitate to
+                  <a href="#">contact support</a>
+                </p>
+              </div>
 
-            <hr>
-            <div class="btn-push">
-            <input type="submit" value="Buy WP Pusher" class="btn-pusher">
-            </div>
-            <div class="support">
-                <span><img src="/asset/Mask.png" alt="question mark"></span><p><strong>Need any help?</strong> Don't hesitate to <a href="#">contact support</a></p>
-            </div>
+              <div class="stripe">
+                <img src="/asset/Shape-strip.png" alt="" />
+              </div>
+            </form>
+          </div>
 
-            <div class="stripe">
-                <img src="/asset/Shape-strip.png" alt="">
-            </div>
-
-        </form>
-        </div>
-
-        <!-- side div -->
-        <div class="side-div">
+          <!-- side div -->
+          <div class="side-div">
             <h2>Freelancer</h2>
             <div class="subscription">
-            <span class="side-span"><sup>$</sup><strong>99</strong> <sub>/year</sub></span>
-            <p class="sub-1">Automatically renews after 1 year</p>
+              <span class="side-span"
+                ><sup>$</sup><strong>99</strong> <sub>/year</sub></span
+              >
+              <p class="sub-1">Automatically renews after 1 year</p>
             </div>
 
             <div class="benefits">
-                <div class="clients">
-                    <span><img src="/asset/Combined Shape.png" alt=""></span>
-                    <p>Use on 5 client sites</p>
-                </div>
-                <div class="clients">
-                    <span><img src="/asset/Combined Shape.png" alt=""></span>
-                    <p>Use on 5 client sites</p>
-                </div>
-                <div class="clients">
-                    <span><img src="/asset/Combined Shape.png" alt=""></span>
-                    <p>Use on 5 client sites</p>
-                </div>
+              <div class="clients">
+                <span><img src="/asset/Combined Shape.png" alt="" /></span>
+                <p>Use on 5 client sites</p>
+              </div>
+              <div class="clients">
+                <span><img src="/asset/Combined Shape.png" alt="" /></span>
+                <p>Use on 5 client sites</p>
+              </div>
+              <div class="clients">
+                <span><img src="/asset/Combined Shape.png" alt="" /></span>
+                <p>Use on 5 client sites</p>
+              </div>
             </div>
 
             <div class="need">
-                <p>Need <strong>20</strong> client sites?</p>
+              <p>Need <strong>20</strong> client sites?</p>
 
-                <a href="#">Switch to agency plan</a>
+              <a href="#">Switch to agency plan</a>
             </div>
 
-            <hr>
+            <hr />
 
             <div class="best">
-                <p>
-                    FTP is horrible to deal with.
-                    <strong>WP Pusher</strong> solves that issue,
-                    and the customers support is awesome
-                </p>
-                <div class="kirk">
-                    <img src="/asset/Bitmap.png" alt="Kirks picture">
-                    <p>Kirk Beard</p>
-                </div>
+              <p>
+                FTP is horrible to deal with.
+                <strong>WP Pusher</strong> solves that issue, and the customers
+                support is awesome
+              </p>
+              <div class="kirk">
+                <img src="/asset/Bitmap.png" alt="Kirks picture" />
+                <p>Kirk Beard</p>
+              </div>
             </div>
-
-        </div>
-        </div>
-   
-
-            <!-- End of container div  -->
+          </div>
         </div>
 
+        <!-- End of container div  -->
+      </div>
     </div>
 
     <footer>
-        <p><span>&copy</span> 2018 WP Pusher IVS</p>. <a href="#">Terms of Service</a>
+      <p><span>&copy</span> 2018 WP Pusher IVS</p>
+      . <a href="#">Terms of Service</a>
     </footer>
-</body>
+    <script src="/JavaScript/menu.js"></script>
+  </body>
 </html>
